--- a/CBriscola.Avalonia/MainWindow.axaml
+++ b/CBriscola.Avalonia/MainWindow.axaml
@@ -56,6 +56,7 @@
 			<x:String x:Key="Livello">Livello della CPU</x:String>
 			<x:String x:Key="LivelloCambiato">Il Livello è cambiato</x:String>
 			<x:String x:Key="PartitaRiavviata">Comincerà una nuova partita</x:String>
+			<x:String x:Key="EffettuaSecondaPartita">Vuoi effettuare la seconda partita</x:String>
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="en">
 			<x:String x:Key="PuntiDiPrefisso">&#160;</x:String>
@@ -99,6 +100,7 @@
 			<x:String x:Key="Livello">CPU Level</x:String>
 			<x:String x:Key="LivelloCambiato">The level has changed</x:String>
 			<x:String x:Key="PartitaRiavviata">A new game will start</x:String>
+			<x:String x:Key="EffettuaSecondaPartita">do you want to play a second game</x:String>
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="de">
 			<x:String x:Key="PuntiDiPrefisso">&#160;</x:String>
@@ -142,6 +144,7 @@
 			<x:String x:Key="Livello">CPU-Ebene</x:String>
 			<x:String x:Key="LivelloCambiato">Level hat sich geändert</x:String>
 			<x:String x:Key="PartitaRiavviata">Ein neues Spiel beginnt</x:String>
+			<x:String x:Key="EffettuaSecondaPartita">Spielt er ein zweites Spiel</x:String>
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="fr">
 			<x:String x:Key="PuntiDiPrefisso">Points de</x:String>
@@ -185,6 +188,7 @@
 			<x:String x:Key="Livello">niveau processeur</x:String>
 			<x:String x:Key="LivelloCambiato">Le niveau a changé</x:String>
 			<x:String x:Key="PartitaRiavviata">Un nouveau jeu va commencer</x:String>
+			<x:String x:Key="EffettuaSecondaPartita">est-ce qu'il joue un deuxième jeu</x:String>
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="es">
 			<x:String x:Key="PuntiDiPrefisso">Puntos de</x:String>
@@ -228,6 +232,7 @@
 			<x:String x:Key="Livello">Nnivel de la CPU</x:String>
 			<x:String x:Key="LivelloCambiato">El nivel ha cambiado</x:String>
 			<x:String x:Key="PartitaRiavviata">Comenzará un nuevo juego</x:String>
+			<x:String x:Key="EffettuaSecondaPartita">¿Hace un segundo juego</x:String>
 		</ResourceDictionary>
 	</Window.Resources>
 	<Window.Content>
@@ -284,7 +289,7 @@
 					<RowDefinition />
 				</Grid.RowDefinitions>
 				<Image Source="avares://CBriscola.Avalonia/Assets/background.jpg" Grid.Row="0" Grid.Column="0" Grid.RowSpan="7" Stretch="Fill" />
-				<Label Grid.Row="0">CBriscola.Avalonia versione 0.7.3</Label>
+				<Label Grid.Row="0">CBriscola.Avalonia versione 0.7.5</Label>
 				<Label Grid.Row="1">ⓒ Giulio Sorrentino 2023</Label>
 				<Label Grid.Row="2">License: GPL v3 or, in your humble opinion, any later version</Label>
 				<Label Grid.Row="3">This trump wins because it scores more points not because it deals the cards, therefore also taking the 8s, 9s and 10s</Label>
