--- a/CBriscola.Avalonia/MainWindow.axaml
+++ b/CBriscola.Avalonia/MainWindow.axaml
@@ -60,6 +60,13 @@
 			<x:String x:Key="EffettuaSecondaPartita">Vuoi effettuare la seconda partita</x:String>
 			<x:String x:Key="MazzoNonTrovatoTitolo">Impossibile trovare il mazzo personalizzato</x:String>
 			<x:String x:Key="MazzoNonTrovatoTesto">Impossibile trovare il mazzo personalizzato, probabilmente è stato cancellato. Verrà caricato il mazzo Napoletano.</x:String>
+			<x:String x:Key="VarianteStessoSeme">Variante nella quale bisogna rispondere al seme</x:String>
+			<x:String x:Key="VarianteBussataTitolo">Hai scelto di giocare la variante bussata</x:String>
+			<x:String x:Key="VarianteBussataTesto">Hai scelto di giocare la variante bussata, la partita verrà riavviata</x:String>
+			<x:String x:Key="VarianteNormaleTitolo">Hai scelto di giocare la variante normale</x:String>
+			<x:String x:Key="VarianteNormaleTesto">Hai scelto di giocare la variante normale, la partita verrà riavviata</x:String>
+			<x:String x:Key="MossaNonConsentitaTitolo">Mossa non consentita</x:String>
+			<x:String x:Key="MossaNonConsentitaTesto">Devi rispondere al seme</x:String>
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="en">
 			<x:String x:Key="PuntiDiPrefisso">&#160;</x:String>
@@ -106,6 +113,13 @@
 			<x:String x:Key="EffettuaSecondaPartita">do you want to play a second game</x:String>
 			<x:String x:Key="MazzoNonTrovatoTitolo">Cannot find custom deck</x:String>
 			<x:String x:Key="MazzoNonTrovatoTesto">The custom deck could not be found, it has probably been deleted. The Neapolitan deck will be loaded.</x:String>
+			<x:String x:Key="VarianteStessoSeme">Variant in which you have to respond to the suit</x:String>
+			<x:String x:Key="VarianteBussataTitolo">You have chosen to play the knock variant</x:String>
+			<x:String x:Key="VarianteBussataTesto">You have chosen to play the knock variant, the game will be restarted</x:String>
+			<x:String x:Key="VarianteNormaleTitolo">You have chosen to play the normal variant</x:String>
+			<x:String x:Key="VarianteNormaleTesto">You have chosen to play the normal variant, the game will be restarted</x:String>
+			<x:String x:Key="MossaNonConsentitaTitolo">Move not allowed</x:String>
+			<x:String x:Key="MossaNonConsentitaTesto">You have to respond to the seed</x:String>		
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="de">
 			<x:String x:Key="PuntiDiPrefisso">&#160;</x:String>
@@ -152,6 +166,13 @@
 			<x:String x:Key="EffettuaSecondaPartita">Spielt er ein zweites Spiel</x:String>
 			<x:String x:Key="MazzoNonTrovatoTitolo">Benutzerdefiniertes Deck kann nicht gefunden werden</x:String>
 			<x:String x:Key="MazzoNonTrovatoTesto">Das benutzerdefinierte Deck konnte nicht gefunden werden, es wurde wahrscheinlich gelöscht. Das neapolitanische Deck wird geladen.</x:String>
+			<x:String x:Key="VarianteStessoSeme">Variante, bei der Sie die Klage beantworten müssen</x:String>
+			<x:String x:Key="VarianteBussataTitolo">Sie haben sich für die Klopfvariante entschieden</x:String>
+			<x:String x:Key="VarianteBussataTesto">Sie haben sich für die Klopfvariante entschieden, das Spiel wird neu gestartet</x:String>
+			<x:String x:Key="VarianteNormaleTitolo">Sie haben sich für die normale Variante entschieden</x:String>
+			<x:String x:Key="VarianteNormaleTesto">Sie haben sich für die normale Variante entschieden, das Spiel wird neu gestartet</x:String>
+			<x:String x:Key="MossaNonConsentitaTitolo">Bewegung nicht erlaubt</x:String>
+			<x:String x:Key="MossaNonConsentitaTesto">Sie müssen auf den Samen reagieren</x:String>
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="fr">
 			<x:String x:Key="PuntiDiPrefisso">Points de</x:String>
@@ -198,15 +219,22 @@
 			<x:String x:Key="EffettuaSecondaPartita">est-ce qu'il joue un deuxième jeu</x:String>
 			<x:String x:Key="MazzoNonTrovatoTitolo">Impossible de trouver un deck personnalisé</x:String>
 			<x:String x:Key="MazzoNonTrovatoTesto">Le deck personnalisé est introuvable, il a probablement été supprimé. Le jeu napolitain sera chargé.</x:String>
+			<x:String x:Key="VarianteStessoSeme">Variante dans laquelle vous devez répondre au procès</x:String>
+			<x:String x:Key="VarianteBussataTitolo">Vous avez choisi de jouer la variante knock</x:String>
+			<x:String x:Key="VarianteBussataTesto">Vous avez choisi de jouer à la variante knock, le jeu va redémarrer</x:String>
+			<x:String x:Key="VarianteNormaleTitolo">Vous avez choisi de jouer à la variante normale</x:String>
+			<x:String x:Key="VarianteNormaleTesto">Vous avez choisi de jouer à la variante normale, le jeu va redémarrer</x:String>
+			<x:String x:Key="MossaNonConsentitaTitolo">Déplacement interdit</x:String>
+			<x:String x:Key="MossaNonConsentitaTesto">Vous devez répondre à la graine</x:String>
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="es">
 			<x:String x:Key="PuntiDiPrefisso">Puntos de</x:String>
 			<x:String x:Key="PuntiDiSuffisso">&#160;</x:String>
 			<x:String x:Key="NelMazzoRimangono">Quedan</x:String>
-			<x:String x:Key="carte">cartas en la baraja</x:String>
+			<x:String x:Key="carte">naipes en la baraja</x:String>
 			<x:String x:Key="IlSemeDiBriscolaE">La semilla de triunfo es</x:String>
-			<x:String x:Key="BriscolaDaPunti">La carta que designa la semilla de triunfo puede sumar puntos</x:String>
-			<x:String x:Key="AvvisaTallone">Alert when the deck ends</x:String>
+			<x:String x:Key="BriscolaDaPunti">La naipe que designa la semilla de triunfo puede sumar puntos</x:String>
+			<x:String x:Key="AvvisaTallone">Alerta cuando se acaba la baraja</x:String>
 			<x:String x:Key="NomeUtente">Nombre de usuario</x:String>
 			<x:String x:Key="NomeCpu">Nombre de la CPU</x:String>
 			<x:String x:Key="giocataVista">He visto los juegos</x:String>
@@ -216,7 +244,7 @@
 			<x:String x:Key="PartitaPatta">El juego se ahoga</x:String>
 			<x:String x:Key="HaiVinto">Tú ganas</x:String>
 			<x:String x:Key="HaiPerso">Yo perdido</x:String>
-			<x:String x:Key="per">Yo perdido por</x:String>
+			<x:String x:Key="per">por</x:String>
 			<x:String x:Key="punti">puntos</x:String>
 			<x:String x:Key="PartitaFinita">Juego terminado</x:String>
 			<x:String x:Key="NuovaPartita">¿Quieres jugar de nuevo</x:String>
@@ -229,14 +257,14 @@
 			<x:String x:Key="denari">Dinero</x:String>
 			<x:String x:Key="spade">Espadas</x:String>
 			<x:String x:Key="TalloneFinito">La baraja está terminada</x:String>
-			<x:String x:Key="LaCPUHaGiocatoIl">The CPU has gamed the</x:String>
+			<x:String x:Key="LaCPUHaGiocatoIl">La CPU ha jugado el</x:String>
 			<x:String x:Key="Briscola">Triunfo</x:String>
 			<x:String x:Key="di">de</x:String>
 			<x:String x:Key="Cuori">Corazon</x:String>
 			<x:String x:Key="Quadri">Diamantes</x:String>
 			<x:String x:Key="Fiori">Tréboles</x:String>
 			<x:String x:Key="Picche">Picas</x:String>
-			<x:String x:Key="TalloneFinitoIntestazione">Deck Finished</x:String>
+			<x:String x:Key="TalloneFinitoIntestazione">Baraja terminada</x:String>
 			<x:String x:Key="GiocataCarta">Carta de valor jugada</x:String>
 			<x:String x:Key="Livello">Nnivel de la CPU</x:String>
 			<x:String x:Key="LivelloCambiato">El nivel ha cambiado</x:String>
@@ -244,6 +272,13 @@
 			<x:String x:Key="EffettuaSecondaPartita">¿Hace un segundo juego</x:String>
 			<x:String x:Key="MazzoNonTrovatoTitolo">No se puede encontrar el mazo personalizado</x:String>
 			<x:String x:Key="MazzoNonTrovatoTesto">No se pudo encontrar la plataforma personalizada, probablemente se haya eliminado. Se cargará la baraja napolitana.</x:String>
+			<x:String x:Key="VarianteStessoSeme">Variante en la que hay que responder a la demanda</x:String>
+			<x:String x:Key="VarianteBussataTitolo">Has elegido jugar la variante knock.</x:String>
+			<x:String x:Key="VarianteBussataTesto">Has elegido jugar la variante knock, el juego se reiniciará.</x:String>
+			<x:String x:Key="VarianteNormaleTitolo">Has elegido jugar la variante normal.</x:String>
+			<x:String x:Key="VarianteNormaleTesto">Has elegido jugar la variante normal, el juego se reiniciará.</x:String>
+			<x:String x:Key="MossaNonConsentitaTitolo">Mover no permitido</x:String>
+			<x:String x:Key="MossaNonConsentitaTesto">Tienes que responder a la semilla.</x:String>
 		</ResourceDictionary>
 	</Window.Resources>
 	<Window.Content>
@@ -297,16 +332,14 @@
 					<RowDefinition />
 					<RowDefinition />
 					<RowDefinition />
-					<RowDefinition />
 				</Grid.RowDefinitions>
 				<Image Source="avares://CBriscola.Avalonia/Assets/background.jpg" Grid.Row="0" Grid.Column="0" Grid.RowSpan="7" Stretch="Fill" />
-				<Label Grid.Row="0">CBriscola.Avalonia versione 0.7.8</Label>
-				<Label Grid.Row="1">ⓒ Giulio Sorrentino 2023</Label>
+				<Label Grid.Row="0">CBriscola.Avalonia versione 0.8.0</Label>
+				<Label Grid.Row="1">ⓒ Giulio Sorrentino 2023-2024</Label>
 				<Label Grid.Row="2">License: GPL v3 or, in your humble opinion, any later version</Label>
 				<Label Grid.Row="3">This trump wins because it scores more points not because it deals the cards, therefore also taking the 8s, 9s and 10s</Label>
-				<Label Grid.Row="4">Dedicato a Francesca, ossia "Quella".</Label>
-				<Button Click="OnSito_Click" Grid.Row="5">https://github.com/numerunix/CBriscola.Avalonia</Button>
-				<Button x:Name="InfoApplicazione" Click="OnApp_Click" Grid.Row="6">Applicazione</Button>
+				<Button Click="OnSito_Click" Grid.Row="4">https://github.com/numerunix/CBriscola.Avalonia</Button>
+				<Button x:Name="InfoApplicazione" Click="OnApp_Click" Grid.Row="5">Applicazione</Button>
 			</Grid>
 			<Grid x:Name="GOpzioni" IsVisible="False">
 				<Grid.ColumnDefinitions>
@@ -320,30 +353,33 @@
 					<RowDefinition />
 					<RowDefinition />
 					<RowDefinition />
+					<RowDefinition />
 					<RowDefinition Height="300"/>
 					<RowDefinition />
 					<RowDefinition />
 				</Grid.RowDefinitions>
-				<Image Source="avares://CBriscola.Avalonia/Assets/background.jpg" Grid.Row="0" Grid.Column="0" Grid.RowSpan="9" Grid.ColumnSpan="2" Stretch="Fill" />
+				<Image Source="avares://CBriscola.Avalonia/Assets/background.jpg" Grid.Row="0" Grid.Column="0" Grid.RowSpan="10" Grid.ColumnSpan="2" Stretch="Fill" />
 				<Label x:Name="opNomeUtente" Grid.Row="0" Grid.Column="0"/>
 				<TextBox x:Name="txtNomeUtente" Grid.Row="0" Grid.Column="1" />
 				<Label x:Name="opNomeCpu" Grid.Row="1" Grid.Column="0" />
 				<TextBox x:Name="txtCpu" Grid.Row="1" Grid.Column="1" />
 				<CheckBox x:Name="cbCartaBriscola" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" IsChecked="True" />
-				<Label x:Name="lbCartaBriscola" Grid.Row="3" Grid.Column="1" />
+				<Label x:Name="lbCartaBriscola" Grid.Row="3" Grid.Column="1" Foreground="Black"/>
 				<CheckBox x:Name="cbAvvisaTallone" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" IsChecked="True" />
-				<Label x:Name="lbAvvisaTallone" Grid.Row="4" Grid.Column="1" />
-				<Label x:Name="lbLivello" Grid.Row="5" Grid.Column="0" />
-				<ComboBox x:Name="cbLivello" Grid.Row="5" Grid.Column="1">
+				<Label x:Name="lbAvvisaTallone" Grid.Row="4" Grid.Column="1"  Foreground="Black"/>
+				<Label x:Name="lbStessoSeme" Grid.Row="5" Grid.Column="1"  Foreground="Black"/>
+				<CheckBox x:Name="cbStessoSeme" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" IsChecked="True" />
+				<Label x:Name="lbLivello" Grid.Row="6" Grid.Column="0" />
+				<ComboBox x:Name="cbLivello" Grid.Row="6" Grid.Column="1">
 					<ComboBoxItem>1</ComboBoxItem>
 					<ComboBoxItem>2</ComboBoxItem>
 					<ComboBoxItem>3</ComboBoxItem>
 				</ComboBox>
-                <Label x:Name="lbmazzi" Content="Mazzi" Grid.Row="6" Grid.Column="0" />
-                <ListBox x:Name="lsmazzi" Grid.Row="6" Grid.Column="1" />
-				<Button Click="OnOk_Click"  Grid.Row="7" Grid.Column="1">OK</Button>
-				<Button x:Name="OpzioniApplicazione" Click="OnApp_Click" Grid.Row="8" Grid.Column="0">Applicazione</Button>
-				<Button x:Name="OpzioniInformazioni" Grid.Row="8" Grid.Column="1" Click="OnInfo_Click">Informazioni</Button>
+                <Label x:Name="lbmazzi" Content="Mazzi" Grid.Row="7" Grid.Column="0" />
+                <ListBox x:Name="lsmazzi" Grid.Row="7" Grid.Column="1" />
+				<Button Click="OnOk_Click"  Grid.Row="8" Grid.Column="1">OK</Button>
+				<Button x:Name="OpzioniApplicazione" Click="OnApp_Click" Grid.Row="9" Grid.Column="0">Applicazione</Button>
+				<Button x:Name="OpzioniInformazioni" Grid.Row="9" Grid.Column="1" Click="OnInfo_Click">Informazioni</Button>
 			</Grid>
 			<Grid x:Name="FinePartita" IsVisible="False">
 				<Grid.RowDefinitions>
