ora se il file delle opzioni viene corrotto ha le opzioni di default.

--- a/CBriscola.Avalonia/MainWindow.axaml
+++ b/CBriscola.Avalonia/MainWindow.axaml
@@ -74,8 +74,8 @@
 			<x:String x:Key="PuntiDiSuffisso">points</x:String>
 			<x:String x:Key="NelMazzoRimangono">There are</x:String>
 			<x:String x:Key="carte">cards left in the deck</x:String>
-			<x:String x:Key="IlSemeDiBriscolaE">The trump seed is</x:String>
-			<x:String x:Key="BriscolaDaPunti">The card deisgnating the trump seed can score points</x:String>
+			<x:String x:Key="IlSemeDiBriscolaE">The trump suit is</x:String>
+			<x:String x:Key="BriscolaDaPunti">The card desgnating the trump suit can have a weight</x:String>
 			<x:String x:Key="AvvisaTallone">Alert when the deck ends</x:String>
 			<x:String x:Key="NomeUtente">User name</x:String>
 			<x:String x:Key="NomeCpu">Cpu name</x:String>
@@ -107,7 +107,7 @@
 			<x:String x:Key="Briscola">Briscola</x:String>
 			<x:String x:Key="di">of</x:String>
 			<x:String x:Key="TalloneFinitoIntestazione">Deck Finished</x:String>
-			<x:String x:Key="GiocataCarta">Value card played</x:String>
+			<x:String x:Key="GiocataCarta">Card with weight played</x:String>
 			<x:String x:Key="Livello">CPU Level</x:String>
 			<x:String x:Key="LivelloCambiato">The level has changed</x:String>
 			<x:String x:Key="PartitaRiavviata">A new game will start</x:String>
@@ -120,7 +120,7 @@
 			<x:String x:Key="VarianteNormaleTitolo">You have chosen to play the normal variant</x:String>
 			<x:String x:Key="VarianteNormaleTesto">You have chosen to play the normal variant, the game will be restarted</x:String>
 			<x:String x:Key="MossaNonConsentitaTitolo">Move not allowed</x:String>
-			<x:String x:Key="MossaNonConsentitaTesto">You have to respond to the seed</x:String>		
+			<x:String x:Key="MossaNonConsentitaTesto">You have to respond to the suit</x:String>		
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="de">
 			<x:String x:Key="PuntiDiPrefisso">&#160;</x:String>
@@ -128,7 +128,7 @@
 			<x:String x:Key="NelMazzoRimangono">Es sind noch</x:String>
 			<x:String x:Key="carte">Karten im Deck übrig</x:String>
 			<x:String x:Key="IlSemeDiBriscolaE">Der Trumpf ist</x:String>
-			<x:String x:Key="BriscolaDaPunti">Die Trumpfkarte kann Punkte bringen</x:String>
+			<x:String x:Key="BriscolaDaPunti">Die Karte, die den Trumpf bezeichnet, kann ein Gewicht haben</x:String>
 			<x:String x:Key="AvvisaTallone">Warnung, wenn das Deck endet</x:String>
 			<x:String x:Key="NomeUtente">Nutzername</x:String>
 			<x:String x:Key="NomeCpu">CPU-Name</x:String>
@@ -160,7 +160,7 @@
 			<x:String x:Key="Fiori">Kreuz</x:String>
 			<x:String x:Key="Picche">Pik</x:String>
 			<x:String x:Key="TalloneFinitoIntestazione">fertiges Kartenspiel</x:String>
-			<x:String x:Key="GiocataCarta">Wertkarte gespielt</x:String>
+			<x:String x:Key="GiocataCarta">Karte mit ausgespieltem Gewicht</x:String>
 			<x:String x:Key="Livello">CPU-Ebene</x:String>
 			<x:String x:Key="LivelloCambiato">Level hat sich geändert</x:String>
 			<x:String x:Key="PartitaRiavviata">Ein neues Spiel beginnt</x:String>
@@ -180,8 +180,8 @@
 			<x:String x:Key="PuntiDiSuffisso">&#160;</x:String>
 			<x:String x:Key="NelMazzoRimangono">Il y a</x:String>
 			<x:String x:Key="carte">cartes restantes dans le jeu</x:String>
-			<x:String x:Key="IlSemeDiBriscolaE">La graine d'atout est</x:String>
-			<x:String x:Key="BriscolaDaPunti">La carte désignant la graine d'atout peut marquer des points</x:String>
+			<x:String x:Key="IlSemeDiBriscolaE">La costume d'atout est</x:String>
+			<x:String x:Key="BriscolaDaPunti">La carte désignant l'atout peut avoir un poids</x:String>
 			<x:String x:Key="AvvisaTallone">Alerte lorsque le jeu se termine</x:String>
 			<x:String x:Key="NomeUtente">Nom d'utilisateur</x:String>
 			<x:String x:Key="NomeCpu">CNom du processeur</x:String>
@@ -205,36 +205,36 @@
 			<x:String x:Key="denari">Deniers</x:String>
 			<x:String x:Key="spade">épées</x:String>
 			<x:String x:Key="TalloneFinito">Le plateau est terminé</x:String>
-			<x:String x:Key="LaCPUHaGiocatoIl">Le CPU a joué lse</x:String>
+			<x:String x:Key="LaCPUHaGiocatoIl">Le CPU a joué le</x:String>
 			<x:String x:Key="Briscola">atouts</x:String>
-			<x:String x:Key="di">&#160;</x:String>
+			<x:String x:Key="di">de</x:String>
 			<x:String x:Key="Cuori">Cœur</x:String>
 			<x:String x:Key="Quadri">Carreau</x:String>
 			<x:String x:Key="Fiori">Trèfle</x:String>
 			<x:String x:Key="Picche">Pique</x:String>
 			<x:String x:Key="TalloneFinitoIntestazione">Plateau terminé</x:String>
-			<x:String x:Key="GiocataCarta">Carte de valeur jouée</x:String>
+			<x:String x:Key="GiocataCarta">Carte avec poids jouée</x:String>
 			<x:String x:Key="Livello">niveau processeur</x:String>
 			<x:String x:Key="LivelloCambiato">Le niveau a changé</x:String>
 			<x:String x:Key="PartitaRiavviata">Un nouveau jeu va commencer</x:String>
 			<x:String x:Key="EffettuaSecondaPartita">est-ce qu'il joue un deuxième jeu</x:String>
 			<x:String x:Key="MazzoNonTrovatoTitolo">Impossible de trouver un deck personnalisé</x:String>
 			<x:String x:Key="MazzoNonTrovatoTesto">Le deck personnalisé est introuvable, il a probablement été supprimé. Le jeu napolitain sera chargé.</x:String>
-			<x:String x:Key="VarianteStessoSeme">Variante dans laquelle vous devez répondre au procès</x:String>
+			<x:String x:Key="VarianteStessoSeme">Variante dans laquelle vous devez répondre à la costume</x:String>
 			<x:String x:Key="VarianteBussataTitolo">Vous avez choisi de jouer la variante knock</x:String>
 			<x:String x:Key="VarianteBussataTesto">Vous avez choisi de jouer à la variante knock, le jeu va redémarrer</x:String>
 			<x:String x:Key="VarianteNormaleTitolo">Vous avez choisi de jouer à la variante normale</x:String>
 			<x:String x:Key="VarianteNormaleTesto">Vous avez choisi de jouer à la variante normale, le jeu va redémarrer</x:String>
 			<x:String x:Key="MossaNonConsentitaTitolo">Déplacement interdit</x:String>
-			<x:String x:Key="MossaNonConsentitaTesto">Vous devez répondre à la graine</x:String>
+			<x:String x:Key="MossaNonConsentitaTesto">Vous devez répondre à la costume</x:String>
 		</ResourceDictionary>
 		<ResourceDictionary x:Key="es">
 			<x:String x:Key="PuntiDiPrefisso">Puntos de</x:String>
 			<x:String x:Key="PuntiDiSuffisso">&#160;</x:String>
 			<x:String x:Key="NelMazzoRimangono">Quedan</x:String>
-			<x:String x:Key="carte">naipes en la baraja</x:String>
+			<x:String x:Key="carte">tarjetas en la baraja</x:String>
 			<x:String x:Key="IlSemeDiBriscolaE">La semilla de triunfo es</x:String>
-			<x:String x:Key="BriscolaDaPunti">La naipe que designa la semilla de triunfo puede sumar puntos</x:String>
+			<x:String x:Key="BriscolaDaPunti">La tarjeta que designa el triunfo puede tener un peso</x:String>
 			<x:String x:Key="AvvisaTallone">Alerta cuando se acaba la baraja</x:String>
 			<x:String x:Key="NomeUtente">Nombre de usuario</x:String>
 			<x:String x:Key="NomeCpu">Nombre de la CPU</x:String>
@@ -249,7 +249,7 @@
 			<x:String x:Key="punti">puntos</x:String>
 			<x:String x:Key="PartitaFinita">Juego terminado</x:String>
 			<x:String x:Key="NuovaPartita">¿Quieres jugar de nuevo</x:String>
-			<x:String x:Key="Mazzo">baraja</x:String>
+			<x:String x:Key="Mazzo">Baraja</x:String>
 			<x:String x:Key="Si">Sí</x:String>
 			<x:String x:Key="No">No</x:String>
 			<x:String x:Key="Condividi">Compartir</x:String>
@@ -266,8 +266,8 @@
 			<x:String x:Key="Fiori">Tréboles</x:String>
 			<x:String x:Key="Picche">Picas</x:String>
 			<x:String x:Key="TalloneFinitoIntestazione">Baraja terminada</x:String>
-			<x:String x:Key="GiocataCarta">Carta de valor jugada</x:String>
-			<x:String x:Key="Livello">Nnivel de la CPU</x:String>
+			<x:String x:Key="GiocataCarta">Tarjeta con placas de peso jugada</x:String>
+			<x:String x:Key="Livello">Nivel de la CPU</x:String>
 			<x:String x:Key="LivelloCambiato">El nivel ha cambiado</x:String>
 			<x:String x:Key="PartitaRiavviata">Comenzará un nuevo juego</x:String>
 			<x:String x:Key="EffettuaSecondaPartita">¿Hace un segundo juego</x:String>
